--- a/lab03/recipe.css
+++ b/lab03/recipe.css
@@ -1,6 +1,9 @@
-body {background-color:lightcyan;}
-h1 {font-family: Georgia, 'Times New Roman', Times, serif; color: #B0C4DE; text-transform: uppercase;}
-.p1 {font-family: Georgia, 'Times New Roman', Times, serif;}
-h2{font-family: cursive; color: #191970}
+body {background-color: #FFF0F5;}
+h1 {font-family: Monaco; color: #B0C4DE;
+text-transform: uppercase;}
+ul {font-family: Monaco; color:#B0C4DE}
+h2 {font-family: Monaco; color: #D8BFD8}
+ol {font-family: Monaco; color:#B0C4DE}
 h3 {font-family: "Serif"; color: #4682B4}
-p1 {Margin: 70Px;}
+p {font-family: Monaco; color:#FFB6C1}
+p {Margin: 70Px;}
