--- a/lab03/recipe.css
+++ b/lab03/recipe.css
@@ -7,3 +7,4 @@ ol {font-family: Monaco; color:#B0C4DE}
 h3 {font-family: "Serif"; color: #4682B4}
 p {font-family: Monaco; color:#FFB6C1}
 p {Margin: 70Px;}
+img2 {border-radius: 50%;}
