--- a/lab04/recipe.css
+++ b/lab04/recipe.css
@@ -1,10 +1,23 @@
 body {background-color: #FFF0F5;}
-h1 {font-family: Monaco; color: #B0C4DE;
-text-transform: uppercase;}
-ul {font-family: Monaco; color:#B0C4DE}
-h2 {font-family: Monaco; color: #D8BFD8}
-ol {font-family: Monaco; color:#B0C4DE}
-h3 {font-family: "Serif"; color: #4682B4}
-p {font-family: Monaco; color:#FFB6C1}
-p {Margin: 70Px;}
-img2 {border-radius: 50%;}
+    h1 {font-family: Monaco; color: #B0C4DE;
+    text-align: center; font-size:xx-large; font-weight: bold;
+    text-transform: uppercase;}
+    ul {font-family: Monaco; color:#B0C4DE;
+    margin: 10px}
+    h2 {font-family: Monaco; color: #D8BFD8;
+    text-align: center; margin: 50px;}
+    ol {font-family: Monaco; color:#B0C4DE;
+    margin:20px}
+    h3 {font-family: "Serif"; color: #4682B4;
+        margin-left: 20px
+    }
+    li {margin: 20px;}
+    p {font-family: Monaco; color:#FFB6C1;
+        margin: 70x;}
+    img {border-radius: 30%;
+        display: block;
+       margin: auto;
+    }
+div{display:flex}
+#Ingredients {width: 50%;}
+#recipe {width: 50%;}
