--- a/lab04/recipe.css
+++ b/lab04/recipe.css
@@ -5,7 +5,8 @@ body {background-color: #FFF0F5;}
     ul {font-family: Monaco; color:#B0C4DE;
     margin: 10px}
     h2 {font-family: Monaco; color: #D8BFD8;
-    text-align: center; margin: 50px;}
+    text-align: center; margin: 50px;
+    display: flex; border: 2px solid greenyellow}
     ol {font-family: Monaco; color:#B0C4DE;
     margin:20px}
     h3 {font-family: "Serif"; color: #4682B4;
@@ -13,11 +14,13 @@ body {background-color: #FFF0F5;}
     }
     li {margin: 20px;}
     p {font-family: Monaco; color:#FFB6C1;
-        margin: 70x;}
+        margin: 70x; display: flex; border: 2px solid greenyellow }
     img {border-radius: 30%;
         display: block;
        margin: auto;
     }
-div{display:flex}
+div{display: flex; border: 1px solid black;
+width: 100%;
+height: 100%;}
 #Ingredients {width: 50%;}
 #recipe {width: 50%;}
