--- a/lab05/style.css
+++ b/lab05/style.css
@@ -1,6 +1,6 @@
-body {background-color: #FFF0F5;}
+body {background-color: #FFF0F5; font-size: 1.5rem;}
     h1 {font-family: Monaco; color: #B0C4DE;
-    text-align: center; font-size:xx-large; font-weight: bold;
+    text-align: center; font-size:2rem; font-weight: bold;
     text-transform: uppercase;}
     ul {font-family: Monaco; color:#B0C4DE;}
     h2 {font-family: Monaco; color: #D8BFD8;
@@ -20,11 +20,15 @@ body {background-color: #FFF0F5;}
 div{display: flex;
 width: 100%;
 height: 100%;}
-#Ingredients {width: 50%;}
+#Ingredients {width: 50%; height: max-content;}
 #recipe {width: 50%;}
 .hi {display: flex; flex-direction: column; border: 2px solid palevioletred; margin: 15px; padding: 15px; }
 .idek {border: 2px solid palevioletred; margin: 15px; height: 100%; padding: 15px}
-.long {padding-bottom: 375px;}
+.long {padding-bottom: 695px;}
 a {color: #B0C4DE;}
 a:visited{color:paleturquoise;}
 a:hover{color:#D8BFD8;}
+@media only screen and (max-width: 600px){
+    div{display: block;}
+body {background-color: azure;}
+}
