--- a/lab05/style.css
+++ b/lab05/style.css
@@ -18,13 +18,12 @@ body {background-color: #FFF0F5; font-size: 1.5rem;}
        margin: auto;
     }
 div{display: flex;
-width: 100%;
-height: 100%;}
-#Ingredients {width: 50%; height: max-content;}
+width: 100%;}
+#Ingredients {width: 50%;}
 #recipe {width: 50%;}
 .hi {display: flex; flex-direction: column; border: 2px solid palevioletred; margin: 15px; padding: 15px; }
-.idek {border: 2px solid palevioletred; margin: 15px; height: 100%; padding: 15px}
-.long {padding-bottom: 695px;}
+.idek {border: 2px solid palevioletred; margin: 15px; padding: 15px;}
+.long {padding-bottom: 697px;}
 a {color: #B0C4DE;}
 a:visited{color:paleturquoise;}
 a:hover{color:#D8BFD8;}
@@ -32,3 +31,12 @@ a:hover{color:#D8BFD8;}
     div{display: block;}
 body {background-color: azure;}
 }
+.idek,
+  .hi {
+    padding: 0px;
+    margin: 0px;
+    margin-top: 20px;
+  }
+.hi {
+    border: 0px;
+  }
