--- a/lab08/style.css
+++ b/lab08/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #fff0f5;
   font-size: 1.5rem;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h1 {
   font-family: Monaco;
