--- a/lab04/style.css
+++ b/lab04/style.css
@@ -28,3 +28,5 @@ a {color: #B0C4DE;}
 a:visited{color:paleturquoise;}
 a:hover{color:#D8BFD8;}
 .long {padding-bottom: 697px;}
+.melon {
+  padding-left: 15px;
